[WIP] Add GCP CNR Strategy Rename datasources to cloud_accounts Remove unused files Improve Pydantic Model to set default values Improve Test coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,6 @@ omit = [
     "*/tests/*",
     "app/utils/database/init_db.py",
     "app/router/api_v1/endpoints.py",
-    "init_db.py",
     "app/main.py"
 ]
 
@@ -63,7 +62,8 @@ omit = [
 show_missing = true
 exclude_lines = [
     "pragma: no cover",
-    "pragma: no branch"
+    "pragma: no branch",
+    "pass"
 ]
 
 [tool.ruff]
