--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,9 +54,7 @@ omit = [
     "app/core/models.py",
     "*/tests/*",
     "app/utils/database/init_db.py",
-    "app/datasources/*",
     "app/router/api_v1/endpoints.py",
-    "init_db.py",
     "app/main.py"
 ]
 
@@ -64,7 +62,8 @@ omit = [
 show_missing = true
 exclude_lines = [
     "pragma: no cover",
-    "pragma: no branch"
+    "pragma: no branch",
+    "pass"
 ]
 
 [tool.ruff]
