MPT-8249 simplify configuration

--- a/env.example
+++ b/env.example
@@ -1,20 +1,12 @@
 # Rename it to .env
 # BASE
-FFC_MODIFIER_API_V1_PREFIX="/v1/admin"
-FFC_MODIFIER_PUBLIC_URL="http://localhost:8000"
 FFC_MODIFIER_DEBUG=True
-FFC_MODIFIER_PROJECT_NAME="CloudSpend API Modifier"
-FFC_MODIFIER_VERSION="0.1.0"
-FFC_MODIFIER_DESCRIPTION="Service to provide custom users and org management"
 # CLoudSpend API
-FFC_MODIFIER_OPT_SCALE_AUTH_API_URL="https://your-optscaledomain.com"
-FFC_MODIFIER_OPT_SCALE_REST_API_URL="https://your-optscaledomain.com"
+FFC_MODIFIER_OPTSCALE_AUTH_API_URL="https://your-optscaledomain.com"
+FFC_MODIFIER_OPTSCALE_REST_API_URL="https://your-optscaledomain.com"
+FFC_MODIFIER_OPTSCALE_CLUSTER_SECRET="your cluster secret here"
 # JWT TOKEN
-FFC_MODIFIER_SECRET="my_super_secret_here"
-FFC_MODIFIER_ALGORITHM=HS256
-FFC_MODIFIER_ISSUER="SWO"
-FFC_MODIFIER_AUDIENCE="modifier"
+FFC_MODIFIER_JWT_SECRET="my_super_secret_here"
+FFC_MODIFIER_JWT_LEEWAY=30.0
 # API Client
 FFC_MODIFIER_DEFAULT_REQUEST_TIMEOUT=10
-# Admin Token
-FFC_MODIFIER_ADMIN_TOKEN="your admin token here"
