--- a/env.example
+++ b/env.example
@@ -2,8 +2,8 @@
 # BASE
 FFC_MODIFIER_DEBUG=True
 # CLoudSpend API
-FFC_MODIFIER_OPTSCALE_AUTH_API_URL="https://your-optscaledomain.com"
-FFC_MODIFIER_OPTSCALE_REST_API_URL="https://your-optscaledomain.com"
+FFC_MODIFIER_OPTSCALE_AUTH_API_BASE_URL="https://your-optscaledomain.com/auth/v2"
+FFC_MODIFIER_OPTSCALE_REST_API_BASE_URL="https://your-optscaledomain.com/restapi/v2"
 FFC_MODIFIER_OPTSCALE_CLUSTER_SECRET="your cluster secret here"
 # JWT TOKEN
 FFC_MODIFIER_JWT_SECRET="my_super_secret_here"
