--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,3 +49,10 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
     - name: Docker image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
+  
+  dtrack:
+    uses: softwareone-platform/ops-template/.github/workflows/dependency-track-python-uv.yml@v1
+    with:
+      projectName: 'ffc-finops-operations'
+    secrets:
+      DEPENDENCYTRACK_APIKEY: ${{ secrets.DEPENDENCYTRACK_APIKEY }}
